style.css
body {
  font-family: Georgia, serif;
  font-size: 100%;
  margin: 0px;
}

a {
  text-decoration: none;
}

/* IE */
img {  
  border-style: none;
}

blockquote {
  font-style: italic;
}

pre, code {
  font-family: Menlo, Consolas, Monaco, Inconsolata, "Courier New", monospace;
  overflow: auto;
}

pre {
  font-size: 1em;
  padding: 10px;
  background: #fafafa;
  border: 1px solid #ccc;
  border-radius: 4px;
}

table {
  margin: 30px 0px 30px 15px;
}

table, td, th {
  border-collapse: collapse;
  border: 1px solid black;
  vertical-align: middle;
  text-align: center;
  padding: 5px;
}

.body {
}

.header {
  background-color: #303546;
  -moz-box-shadow: 0px 0px 15px;
  -webkit-box-shadow: 0px 0px 15px;
  box-shadow: 0px 0px 15px;
  background-image: -o-linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);
  background-image: -moz-linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);
  background-image: -webkit-linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);
  background-image: -ms-linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);
  background-image: linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);

  background-image: -webkit-gradient(
  linear,
  left bottom,
  left top,
  color-stop(0.47, rgb(68,79,117)),
  color-stop(1, rgb(40,43,53))
  );
}

.title {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 1em;
  text-shadow: #333 2px 2px 4px;
  color: white;
}

.title a {
  padding-left: 25px;
  padding-right: 25px;
  padding-top: 15px;
  padding-bottom: 15px;
  color: white;
  display: block;
}

.blog, .home {
  margin: 25px 25px 25px 25px;
  max-width: 50em;
}

.blog .date {
  margin-top: 0.25em;
}

.blog .entry {
  margin-left: 0;
  margin-right: 0;
  margin-top: 1em;
}

.blog .footer {
  margin-top: 2em;
}

.home .date {
  font-size: 0.9em;
  margin-top: 0.2em;
  margin-bottom: 1.8em;
}

/* http://colorschemedesigner.com/#3Q21TbzcYv5vM */
.home a:link {
  color: black;
}

.home a:hover {
  text-decoration: underline;
}

h1, h2 {
  font-family: Arial, sans-serif;
}

h1 {
  margin: 0px;
  font-size: 1.70em;
}

h2 {
  font-size: 1.45em;
}

.home h2 {
  margin: 0px;
  font-size: 1.35em;
}

